// protoc --go_out=plugins=grpc:. *.proto

syntax = "proto3";

package site;

option go_package = "jh_user_service/api/site/v1";

service Site {
    rpc GetBasicSetting(GetBasicSettingReq) returns (GetBasicSettingRes) {}
    rpc UpdateBasicSetting(UpdateBasicSettingReq) returns (UpdateBasicSettingRes) {}
}

message GetBasicSettingReq {
    // 站点ID，可选，如果不传则使用当前站点
    int32 SiteId = 1;
}

message GetBasicSettingRes {
    string Code = 1;                    // 站点代码
    string Name = 2;                    // 站点名称
    int32 RegisterTimeInterval = 3;     // 同一IP重复注册时间间隔
    bool SwitchRegister = 4;            // 是否开放注册
    bool IsClose = 5;                   // 是否关闭站点
    string CloseReason = 6;             // 关闭原因
    string ServiceUrl = 7;              // 客服链接
    string AgentUrl = 8;                // 代理链接地址
    string MobileUrl = 9;               // 手机域名地址
    string AgentRegisterUrl = 10;       // 代理推广地址
    double MinWithdraw = 11;            // 单笔最低提现金额
    double MaxWithdraw = 12;            // 单笔最高提现金额
    string MobileLogo = 13;             // 手机端Logo
    int32 DefaultAgentId = 14;          // 默认代理ID
    string DefaultAgentName = 15;       // 默认代理名称
    double Balance = 16;                // 总可用额度
    double BalanceReset = 17;           // 剩余额度
}

message UpdateBasicSettingReq {
    int32 SiteId = 1;                   // 站点ID，可选
    int32 IpRegisterTime = 2;           // 同一IP重复注册时间间隔
    bool OpenRegister = 3;              // 是否开放注册
    bool Close = 4;                     // 是否关闭站点
    string CloseReason = 5;             // 关闭原因
    string AgentUrl = 6;                // 代理链接地址
    string MobileUrl = 7;               // 手机域名地址
    string AgentRegisterUrl = 8;        // 代理推广地址
    double MinWithdraw = 9;             // 单笔最低提现金额
    double MaxWithdraw = 10;            // 单笔最高提现金额
    string MobileLogo = 11;             // 手机端Logo
    string ServiceUrl = 12;             // 客服链接
}

message UpdateBasicSettingRes {
    string Message = 1;                 // 响应消息
}